--- a/public/assets/public/css/bootstrap.min.3.3.5.css
+++ b/public/assets/public/css/bootstrap.min.3.3.5.css
@@ -4275,9 +4275,9 @@ a.thumbnail.active,a.thumbnail:focus,a.thumbnail:hover {
     color:inherit
 }
 .alert-success {
-    color:#3c763d;
-    background-color:#dff0d8;
-    border-color:#d6e9c6
+    color:#000000;
+    background-color:#fffff0;
+    border-color:#003377
 }
 .alert-success hr {
     border-top-color:#c9e2b3
