--- a/public/assets/public/css/bootstrap.min.3.3.5.css
+++ b/public/assets/public/css/bootstrap.min.3.3.5.css
@@ -3884,17 +3884,17 @@ select[multiple].input-group-sm>.form-control,select[multiple].input-group-sm>.i
     border-color:#080808
 }
 .navbar-inverse .navbar-brand {
-    color:#9d9d9d
+    color:#FFFFFF
 }
 .navbar-inverse .navbar-brand:focus,.navbar-inverse .navbar-brand:hover {
     color:#fff;
     background-color:transparent
 }
 .navbar-inverse .navbar-text {
-    color:#9d9d9d
+    color:#FFFFFF
 }
 .navbar-inverse .navbar-nav>li>a {
-    color:#9d9d9d
+    color:#FFFFFF
 }
 .navbar-inverse .navbar-nav>li>a:focus,.navbar-inverse .navbar-nav>li>a:hover {
     color:#fff;
@@ -3932,7 +3932,7 @@ select[multiple].input-group-sm>.form-control,select[multiple].input-group-sm>.i
     background-color:#080808
 }
 .navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
-    color:#9d9d9d
+    color:#FFFFFF
 }
 .navbar-inverse .navbar-nav .open .dropdown-menu>li>a:focus,.navbar-inverse .navbar-nav .open .dropdown-menu>li>a:hover {
     color:#fff;
@@ -3953,7 +3953,7 @@ select[multiple].input-group-sm>.form-control,select[multiple].input-group-sm>.i
     color:#fff
 }
 .navbar-inverse .btn-link {
-    color:#9d9d9d
+    color:#FFFFFF
 }
 .navbar-inverse .btn-link:focus,.navbar-inverse .btn-link:hover {
     color:#fff
