--- a/public/assets/public/css/bootstrap.min.3.3.5.css
+++ b/public/assets/public/css/bootstrap.min.3.3.5.css
@@ -2724,7 +2724,7 @@ a.btn.disabled,fieldset[disabled] a.btn {
 }
 .btn-success {
     color:#fff;
-    background-color:#ff9933;
+    background-color:#5cb85c;
     border-color:#4cae4c
 }
 .btn-success.focus,.btn-success:focus {
@@ -2734,12 +2734,12 @@ a.btn.disabled,fieldset[disabled] a.btn {
 }
 .btn-success:hover {
     color:#fff;
-    background-color:#337ab7;
+    background-color:#449d44;
     border-color:#398439
 }
 .btn-success.active,.btn-success:active,.open>.dropdown-toggle.btn-success {
     color:#fff;
-    background-color:#337ab7;
+    background-color:#449d44;
     border-color:#398439
 }
 .btn-success.active.focus,.btn-success.active:focus,.btn-success.active:hover,.btn-success:active.focus,.btn-success:active:focus,.btn-success:active:hover,.open>.dropdown-toggle.btn-success.focus,.open>.dropdown-toggle.btn-success:focus,.open>.dropdown-toggle.btn-success:hover {
@@ -2751,11 +2751,11 @@ a.btn.disabled,fieldset[disabled] a.btn {
     background-image:none
 }
 .btn-success.disabled,.btn-success.disabled.active,.btn-success.disabled.focus,.btn-success.disabled:active,.btn-success.disabled:focus,.btn-success.disabled:hover,.btn-success[disabled],.btn-success[disabled].active,.btn-success[disabled].focus,.btn-success[disabled]:active,.btn-success[disabled]:focus,.btn-success[disabled]:hover,fieldset[disabled] .btn-success,fieldset[disabled] .btn-success.active,fieldset[disabled] .btn-success.focus,fieldset[disabled] .btn-success:active,fieldset[disabled] .btn-success:focus,fieldset[disabled] .btn-success:hover {
-    background-color:#ff9933;
+    background-color:#5cb85c;
     border-color:#4cae4c
 }
 .btn-success .badge {
-    color:#ff9933;
+    color:#5cb85c;
     background-color:#fff
 }
 .btn-info {
